--- a/BankKata/src/BankKata.App/BankKata.App.csproj
+++ b/BankKata/src/BankKata.App/BankKata.App.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Account.cs" />
     <Compile Include="Console.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransactionRepository.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
