--- a/BankKata/src/BankKata.App/BankKata.App.csproj
+++ b/BankKata/src/BankKata.App/BankKata.App.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
+    <Compile Include="Clock.cs" />
     <Compile Include="Console.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatementPrinter.cs" />
