--- a/BankKata/test/BankKata.Tests/BankKata.Tests.csproj
+++ b/BankKata/test/BankKata.Tests/BankKata.Tests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="AccountShould.cs" />
     <Compile Include="PrintStatementFeature.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransactionRepositoryShould.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
