--- a/BankKata/test/BankKata.Tests/BankKata.Tests.csproj
+++ b/BankKata/test/BankKata.Tests/BankKata.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ClockShould.cs" />
     <Compile Include="PrintStatementFeature.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatementPrinterShould.cs" />
     <Compile Include="TransactionRepositoryShould.cs" />
   </ItemGroup>
   <ItemGroup>
